# niftyfifty1

./: .gitignore  13july.md  CLAUDE.md  DESIGN.md  ORCHESTRATION.md  PHASES.md  PLANNING.md  README.md  SEO.md  SPEC_README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  daily-news.yml  eod.yml  manual.yml  premarket.yml
config/: site.json
data/: nse-holidays-2026.json  signal-config.json
data/days/: 2026-01-26.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
pipeline/: config.py
pipeline/assemble/: assembler.py  cli.py  templates.py
pipeline/compose/: client.py  compose.py  parsing.py  passthrough.py  prompts.py  setup_summary.py  validate_prose.py
pipeline/compute/: bias.py  conviction.py  degradation.py  engine.py  votes.py
pipeline/fetch/: cli.py  eod_metrics.py  metrics.py  raw_output.py  retry.py  rss.py
pipeline/orchestrate/: alert.py  check_immutability.py  common.py  postdeploy.py  publish.py  resolve.py  run_eod.py  run_news.py  run_premarket.py
pipeline/tests/: test_assembler.py  test_compose.py  test_compute_bias.py  test_compute_conviction.py  test_compute_degradation.py  test_compute_engine.py  test_compute_votes.py  test_fetch_metrics.py  test_fetch_retry.py  test_orchestrate.py  test_schema.py
pipeline/validate/: schema.py
project plan/: niftyfiftyone Design Spec.html
src/: content.config.ts
src/components/: AwaitingEod.astro  CloseTable.astro  (+8 more)
(+37 files in other folders)
